# LIDAR-Simulation

./: LICENSE  build.sh  run.sh
controllers/LidarController/: LidarController.py
controllers/Supervisor/: Supervisor.py
listener/: CMakeLists.txt  listener.cpp
nodes/: CMakeLists.txt  UDPClient.hpp  laserscan.cpp  robotpose.cpp
protos/: .Pioneer3DistanceSensor.cache  .Pioneer3DistanceSensor.proto.signature  .Pioneer3Gripper.cache  .Pioneer3Gripper.proto.signature  .Pioneer3at.cache  .Pioneer3at.proto.signature  .Pioneer3dx.cache  .Pioneer3dx.proto.signature  .SickLms291.cache  .SickLms291.proto.signature  .Sick_LMS291.cache  .Sick_LMS291.proto.signature  TiM561.proto  myLidar.proto
python/: MinimumAreaRectangle.py  box_generator.py  lidarProcessing.py  rectangle.py  server.py
robot/: model.config  model.sdf
worlds/: .LidarSimulation.wbproj  .sick_terrain_scanning.wbproj  .table2.wbproj  LidarSimulation.wbt  eurobot2016.world  table.dae
